Dokumenter page fix on mobile

--- a/client/src/components/modals/UploadDokument.module.css
+++ b/client/src/components/modals/UploadDokument.module.css
@@ -164,3 +164,9 @@
     display: flex;
     align-items: center;
 }
+
+@media only screen and (max-width: 750px) {
+    .redigerDokumentPDFIcon {
+        width: 100%;
+    }
+}
